--- a/frontend/src/pages/RegularLandingPage.css
+++ b/frontend/src/pages/RegularLandingPage.css
@@ -98,6 +98,7 @@
 
 .user-identifiers {
   position: relative;
+  z-index: 1;
   padding-top: 24px;
 }
 
